# Colorfold

./: .atom-build.yml  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
resources/: test_compute.json  test_machine_file.json
resources/Test0/: Test0.json
shaders/: default_img.fsh  lib.comp  lib.fs  lib.fsh  main_beginning.comp  main_beginning.fsh  main_end.comp  main_end.fsh  test.comp  test.fsh  tmp.comp  vertex.vsh
src/: color.rs  data.rs  dependency.rs  filters.rs  folding.rs  geometry.rs  imaging.rs  main.rs  parser.rs  shaders.rs
test/: test.rs
tests/0/: Test0.Out.fs  Test0.json  Test0.ron  source.txt
tests/1/: Out.fs  Test1.fs  Test1.json  Test1.ron  source.txt
tests/2/: Out.fs  Test2.fs  Test2.json  Test2.ron  source.txt
tests/3/: Out.fs  Test3.fs  Test3.json  Test3.ron  source.txt
tests/4/: Test4.fs  Test4.json  Test4.ron
tests/5/: Test5.fs  Test5.json  Test5.ron
tests/6/: Test6.fs  Test6.json  Test6.ron
