[package]
name = "colorfold"
version = "0.1.0"
authors = ["John Churay <thechurroextrodinare@gmail.com>"]

[features]
default = []
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[[bin]]
name = "colorfold"
path = "src/main.rs"

[dependencies]
env_logger = "0.5"
image = "0.15"
log = "0.4"
winit = "0.10"
gfx-hal = { git = "https://github.com/gfx-rs/gfx", version = "0.1" }
glsl-to-spirv = "0.1.4"
linked_hash_set = "0.1.2"

# Parsing
serde = "1.0.34"
serde_derive = "1.0.34"
serde_json = "1.0.13"

[dependencies.gfx-backend-vulkan]
git = "https://github.com/gfx-rs/gfx"
version = "0.1"
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
git = "https://github.com/gfx-rs/gfx"
version = "0.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
git = "https://github.com/gfx-rs/gfx"
version = "0.1"
optional = true
