[package]
name = "colorfold"
version = "0.1.0"
authors = ["John Churay <thechurroextrodinare@gmail.com>"]

[[bin]]
name = "colorfold"
path = "src/main.rs"

[dependencies]
env_logger = "0.5"
log = "0.4"
linked_hash_set = "0.1.2"

# Parsing
serde = "1.0"
serde_json = "1.0"
ron = "0.5.1"

# Argument Parsing
structopt = { version = "0.3" }
